--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h3 class="titJogador">Humano</h3>
       <span id="placarjogador">0</span>
       <ul id="optionJogador">
-        <li><a><img class="image1" onclick="jogar(1)" src="./img/pedra.png"></a></li>
-        <li><a><img class="image1" onclick="jogar(2)" src="./img/papel.jpg"></a></li>
-        <li><a><img class="image1" onclick="jogar(3)" src="./img/tesoura.png"></a></li>
+        <li><a><img class="image1" onclick="jogada(1)" src="./img/pedra.png"></a></li>
+        <li><a><img class="image1" onclick="jogada(2)" src="./img/papel.jpg"></a></li>
+        <li><a><img class="image1" onclick="jogada(3)" src="./img/tesoura.png"></a></li>
       </ul>
     </div>
 
